Fixed scrollbar styles

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -61,6 +61,7 @@ html {
   -webkit-tap-highlight-color: transparent;
   overflow: hidden;
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -104,7 +105,6 @@ a:hover {
 
 a:focus,
 a:hover {
-  /* color: #2a6496; */
   text-decoration: none;
 }
 
@@ -188,7 +188,7 @@ select:focus {
   font-size: 28px;
   -webkit-appearance: none;
   padding: 0 5px;
-  margin-top: -28px;
+  margin-top: -36px;
   width: auto;
   background-color: transparent;
 }
@@ -350,8 +350,28 @@ table,
   padding-top: 0.5rem;
 }
 
-.pt-3 {
-  padding-top: 0.75rem;
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
 }
 
 .m-2 {
@@ -1183,6 +1203,11 @@ input:checked + .slider:before {
   padding: 0 1em 1em;
 }
 
+#versionHist,
+#suppLang {
+  padding: 2em 1em 1em;
+}
+
 #feature9 {
   padding-bottom: 1.5em;
 }
@@ -1218,7 +1243,8 @@ input:checked + .slider:before {
 }
 
 .t-dark,
-.t-dark > div > table > tbody > tr > td > .elements,
+.t-dark > div > table > tbody > tr > td > .elements
+/* ,
 .t-dark > div > div > div > div > div > div > a:focus,
 .t-dark > div > div > div > div > div > div > a:hover,
 .t-dark > div > div > div > span > a:focus,
@@ -1226,12 +1252,14 @@ input:checked + .slider:before {
 .t-dark > div > div > div > div > div > div > div > span > a:focus,
 .t-dark > div > div > div > div > div > div > div > span > a:hover,
 .t-dark > div > div > div > div > div > div > div > a:focus,
-.t-dark > div > div > div > div > div > div > div > a:hover {
+.t-dark > div > div > div > div > div > div > div > a:hover  */
+{
   color: #eaeaea;
 }
 
 .t-light,
-.t-light > div > table > tbody > tr > td > .elements,
+.t-light > div > table > tbody > tr > td > .elements
+/* ,
 .t-light > div > div > div > div > div > div > a:focus,
 .t-light > div > div > div > div > div > div > a:hover,
 .t-light > div > div > div > span > a:focus,
@@ -1239,18 +1267,19 @@ input:checked + .slider:before {
 .t-light > div > div > div > div > div > div > div > span > a:focus,
 .t-light > div > div > div > div > div > div > div > span > a:hover,
 .t-light > div > div > div > div > div > div > div > a:focus,
-.t-light > div > div > div > div > div > div > div > a:hover {
+.t-light > div > div > div > div > div > div > div > a:hover */
+ {
   color: #000;
 }
 
 .t-dark,
 .t-dark > div > div > div > div > div > div > #compareTop {
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgb(0, 0, 0);
 }
 
 .t-light,
 .t-light > div > div > div > div > div > div > #compareTop {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgb(255, 255, 255);
 }
 
 .t-dark input,
@@ -1265,20 +1294,20 @@ input:checked + .slider:before {
 }
 
 .t-dark > div > .modal-dialog,
-.t-dark > div > div > div > div > div > .close {
+.t-dark .close {
   color: rgba(255, 255, 255, 0.8);
 }
 
 .t-light > div > .modal-dialog,
-.t-light > div > div > div > div > div > .close {
+.t-light .close {
   color: rgba(0, 0, 0, 0.8);
 }
 
-.t-dark > div > div > div > .modal-inner {
+.t-dark .modal-inner {
   background-color: rgba(0, 0, 0, 0.7);
 }
 
-.t-light > div > div > div > .modal-inner {
+.t-light .modal-inner {
   background-color: rgba(255, 255, 255, 0.8);
 }
 
@@ -1296,14 +1325,6 @@ input:checked + .slider:before {
 
 .t-light #headerWrap {
   background-color: #efefef;
-}
-
-.t-dark > div > div > div > div > div > div > a {
-  color: rgba(255, 255, 255, 0.7);
-}
-
-.t-light > div > div > div > div > div > div > a {
-  color: rgba(0, 0, 0, 0.7);
 }
 
 .alkaliMetals {
@@ -1466,11 +1487,25 @@ input:checked + .slider:before {
   padding: 10px 0;
 }
 
+/* Scrollbar */
 
-/* Gumroad */
+* {
+  scrollbar-color: #888888 #f5f5f5;
+  scrollbar-width: thin;
+}
 
-.product .product-main{
-  background: #555;
+*::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+}
+
+*::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f5f5f5;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #888888;
 }
 
 @media print {
